# Embedded-Systems

./: .gitignore  .gitmodules  2022 EXAM SOLUTIONS CONFIDENTIAL.url  Fnuy.txt  Funny.txt  README.md  TODO.md  for_authors.md  getting_started.md
Hardware/Environmental-Sensors/: main.cpp  mbed-os.lib
Hardware/Network Test/: README.MD
Hardware/SDReaderUSBMSD/: main.cpp  mbed_app.json
Software/TCPClientServer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Tasks/Demo-02-01-01-binary/: main.cpp  setup_demo.cpp
Tasks/Eyes_Winky/: F429_Mega_Shell_Header.h  README.md  main.cpp
Tasks/HelloWorld/: main.cpp  mbed-os.lib
Tasks/HelloWorld_LCD/: main.cpp
Tasks/LCD_TEST/: libuopmsb.lib  main.cpp  mbed-os.lib
Tasks/LedDisplay/: main.cpp  mbed-os.lib
Tasks/MSB-V2-TEST/: F429_Mega_Shell_Header.h  main.cpp
Tasks/MSB-V2-V4-TEST/: F429_Mega_Shell.cpp  F429_Mega_Shell_Header.h  main.cpp
Tasks/PersonalProject/: main.cpp
Tasks/Solutions/: README.txt
Tasks/TASK-201-PushPull/: main.cpp
Tasks/TASK-203-PortOut/: main.cpp
Tasks/TASK-303-PortOut/: main.cpp
Tasks/TASK-304-DigitalInOut/: main.cpp  mbed-os.lib
Tasks/TASK-308-Challenge/: main.cpp
Tasks/TASK-3XX-USB/: msd.cpp
Tasks/Task-101-Blinky/: README.md  main.cpp  mbed-os.lib
Tasks/Task-102-SOS/: libuopmsb.lib  main.cpp
Tasks/Task-102-SOS-Soln/: main.cpp
Tasks/Task-103-HelloWorld/: main.cpp
Tasks/Task-104-TrafficLights/: libuopmsb.lib  main.cpp
Tasks/Task-105-BusOut/: main.cpp
Tasks/Task-107-PortOut/: main.cpp
Tasks/Task-110-Variables/: main.cpp
Tasks/Task-112-Terminalnput/: main.cpp
Tasks/Task-114-Solution/: main.cpp
Tasks/Task-115-BusOut/: main.cpp
Tasks/Task-116-BusOut/: main.cpp  mbed_app.json
Tasks/Task-116-PortOut/: main.cpp
Tasks/Task-118-PortOut/: main.cpp
Tasks/Task-396-Azure_IoT_Hub/: .gitignore  CMakeLists.txt  libuopmsb.lib  main.cpp  mbed-client-for-azure.lib  mbed_app.json
getting_started/: READM3.md  README.md  hardware-testing.md  hardware.md  software-testing.md  software-tools.md  troubleshooting.md
glossary/: README.md  led.md  microcontroller.md
img/: README.md  basic_traffic_light.drawio  flowchart.drawio  fsm-pwm.drawio  latched_leds.drawio  signal-wait.drawio
level4/: Analogue_Input_1.md  Analogue_Output_1.md  Digital_Inputs_1.md  Digital_Outputs.md  Digital_Outputs_1.md  Digital_Outputs_2.md  Introduction.md  Multiple_Outputs_1.md  READM3.md  README.md  TASK101.md  TASK102.md  TASK103.md  TASK104.md  TASK107.md  TASK110.md  TASK112.md  TASK114.md  TASK115.md  TASK116.md  TASK120.md  TASK122.md  TASK124.md  TASK126.md  TASK127.md  TASK128.md  TASK130.md  TASK132.md  TASK134.md  TASK136.md  TASK138.md  TASK150.md  TASK152.md  TASK156.md  TASK158.md  TASK170.md  TASK174.md  TASK176.md  TASK178.md  musicnotes.xlsx  (+1 more)
level5/: Cplusplus-structures.md  DigitalIO.md  READM3.md  README.md  SerialInterfacing.md  embedded_systems.md  embedded_systems_C.md  embedded_systems_HDL.md  embedded_systems_VHDL.md  interfacing.md  interrupts.md  rapid-poll.md  readme.md  realtime_systems.md
level6/: Cplusplus-classes.md  Cplusplus-oop.md  Cplusplus-structures.md  Cplusplus.md  DigitalIO.md  README.md  interrupts.md  mbed_interfacing_review.md  network_programming.md  rapid-poll-int.md  rapid-poll.md  readme.md  thread_abstractions.md  threads1.md
(+467 files in other folders)
